# classic

./: .gitignore  .travis.yml  Cargo.toml  README.md
benches/broadcast/: lib.rs  murmur.rs  sieve.rs
classic-derive/: Cargo.toml
classic-derive/src/: lib.rs
classic-derive/tests/: structs.rs
src/: connection.rs  lib.rs  manager.rs  sampler.rs  system.rs  test.rs
src/broadcast/: besteffort.rs  mod.rs  multishot.rs  murmur.rs  probabilistic.rs  sieve.rs  uniform.rs
