[package]
name = "classic"
version = "0.1.0"
authors = ["Ogier Bouvier <ogier@bouvier.family>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
drop = { git = "https://github.com/Distributed-EPFL/drop", branch = "feature/io" }
futures = "0.3.4"
tokio = "0.2.0"
tracing = "0.1.13"
serde = "1.0.102"
hashbrown = "0.7.0"
tracing-futures = "0.2.3"
error-chain = "0.12.2"

[dev-dependencies]
tracing-subscriber = "*"
