[package]
name = "classic"
version = "0.1.0"
authors = ["Ogier Bouvier <ogier@bouvier.family>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
drop = { git = "https://github.com/Distributed-EPFL/drop", branch = "feature/io" }
futures = "~0.3"
tokio = "~0.2"
tracing = "~0.1"
serde = "~1.0"
hashbrown = "~0.7"
tracing-futures = "~0.2"
error-chain = "~0.12"

[dev-dependencies]
tracing-subscriber = "*"
